Added SSH Key Name

--- a/piwigo_infrastructure/package.json
+++ b/piwigo_infrastructure/package.json
@@ -9,7 +9,7 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "deploy-stack":"cdk deploy --parameters certificateArn='YOUR CERTIFICATE ARN HERE'"
+    "deploy-stack":"cdk deploy --parameters certificateArn='YOUR CERTIFICATE ARN HERE' --parameters keyname='ADD KEYNAME HERE'"
   },
   "devDependencies": {
     "@aws-cdk/assertions": "1.134.0",
