--- a/piwigo/src/Piwigo/Piwigo.csproj
+++ b/piwigo/src/Piwigo/Piwigo.csproj
@@ -9,9 +9,12 @@
 
   <ItemGroup>
     <!-- CDK Construct Library dependencies -->
-    <PackageReference Include="Amazon.CDK" Version="1.137.0" />
-    <PackageReference Include="Amazon.CDK.AWS.RDS" Version="1.137.0" />
-    <PackageReference Include="Amazon.Jsii.Analyzers" Version="1.50.0" />
+    <PackageReference Include="Amazon.CDK" Version="1.138.2" />
+    <PackageReference Include="Amazon.CDK.AWS.AutoScaling" Version="1.138.2" />
+    <PackageReference Include="Amazon.CDK.AWS.EC2" Version="1.138.2" />
+    <PackageReference Include="Amazon.CDK.AWS.ElasticLoadBalancingV2" Version="1.138.2" />
+    <PackageReference Include="Amazon.CDK.AWS.RDS" Version="1.138.2" />
+    <PackageReference Include="Amazon.Jsii.Analyzers" Version="1.52.1" />
 
     <!-- jsii Roslyn analyzers (un-comment to obtain compile-time checks for missing required props
     <PackageReference Include="Amazon.Jsii.Analyzers" Version="*" PrivateAssets="all" />
