--- a/lychee/package.json
+++ b/lychee/package.json
@@ -10,28 +10,20 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "deploy-stack":"cdk deploy --parameters certificateArn='YOUR CERTIFICATE ARN HERE' --parameters keyname='ADD KEYNAME HERE'"
+    "deploy-stack": "cdk deploy --parameters certificateArn='YOUR CERTIFICATE ARN HERE' --parameters keyname='ADD KEYNAME HERE'"
   },
   "devDependencies": {
-    "@aws-cdk/assertions": "1.145.0",
-    "@types/jest": "27.4.0",
-    "@types/node": "17.0.18",
-    "jest": "27.5.1",
-    "ts-jest": "27.1.3",
-    "aws-cdk": "2.13.0",
-    "ts-node": "10.5.0",
-    "typescript": "4.5.5"
+    "@types/jest": "27.5.0",
+    "@types/node": "17.0.31",
+    "jest": "28.0.3",
+    "ts-jest": "28.0.0",
+    "ts-node": "10.7.0",
+    "typescript": "4.6.4"
   },
   "dependencies": {
-    "@aws-cdk/core": "1.145.0",
-    "@aws-cdk/aws-ec2": "1.145.0",
-    "@aws-cdk/aws-elasticloadbalancingv2": "1.145.0",
-    "@aws-cdk/aws-elasticloadbalancingv2-actions": "1.145.0",
-    "@aws-cdk/aws-elasticloadbalancingv2-targets": "1.145.0",
-    "@aws-cdk/aws-rds": "1.145.0",
-    "@aws-cdk/aws-iam": "1.145.0",
-    "@aws-cdk/aws-secretsmanager": "1.145.0",
-    "@aws-cdk/aws-ssm": "1.145.0",
+    "aws-cdk": "2.22.0",
+    "aws-cdk-lib": "2.22.0",
+    "constructs": "^10.0.130",
     "source-map-support": "^0.5.16"
   }
 }
