--- a/PiwigoEC2HostedDocker/package.json
+++ b/PiwigoEC2HostedDocker/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "cdk": "cdk",
-    "deploy": "cdk deploy --parameters certificateArn=arn:aws:acm:eu-central-1:096573865771:certificate/b69254da-a91c-4226-a94b-120c17738c85 --parameters keyname=bw_vault --parameters dbServerless=true"
+    "deploy": "cdk deploy --parameters certificateArn=arn:aws:acm:eu-central-1:096573865771:certificate/b69254da-a91c-4226-a94b-120c17738c85 --parameters keyname=bw_vault"
   },
   "devDependencies": {
     "@aws-cdk/assertions": "1.177.0",
